# fpy

./: .gitignore  LICENSE  README.md  hamming.py  meta.py  pyproject.toml
.github/workflows/: unit.yml
docs/: TODO.md
fpy2/: __init__.py  examples.py
fpy2/backend/: fpc.py
fpy2/eval/: interpreter.py
fpy2/frontend/: __init__.py  codegen.py  decorator.py  definition.py  formatter.py  fpc.py  fpyast.py  live_vars.py  parser.py  syntax_check.py  visitor.py
fpy2/ir/: __init__.py  formatter.py  ir.py  visitor.py
fpy2/passes/: __init__.py  define_use.py  for_bundling.py  func_update.py  reaching_defs.py  simplify_if.py  ssa.py  verify.py  while_bundling.py
fpy2/runtime/: __init__.py  env.py  function.py  interpreter.py
fpy2/typing/: __init__.py  __init__.pyi
fpy2/utils/: __init__.py  compare.py  error.py  gensym.py  identifier.py
tests/: examples.py  unit.py
tests/examples/: lod.py
tests/fpbench/: __main__.py  fetch.py  parse.py
tests/unit/: __main__.py  defs.py  eval.py  format.py  fpc.py
titanfp/fpy/: __init__.py  ast.py  context.py  examples.py  fpcore.py  fpcore_ops.py  fpyast.py  gensym.py  ops.py  parser.py  parser_ops.py  utils.py  visitor.py
titanfp/fpy/analysis/: __init__.py  def_use.py  free_vars.py  live_vars.py  syntax_check.py  unique_vars.py
titanfp/fpy/backend/: __init__.py  fpc.py
titanfp/fpy/frontend/: ast.py  codegen.py  decorator.py  definition.py  fpyast.py  live_vars.py  lower.py  parser.py  syntax_check.py  visitor.py
titanfp/fpy/ir/: __init__.py  ir.py  types.py  visitor.py
titanfp/fpy/passes/: __init__.py  define_use.py  for_bundling.py  simplify_if.py  verify.py  while_bundling.py
titanfp/fpy/transform/: __init__.py  merge_if.py  ssa.py
titanfp/fpy/typing/: __init__.py  __init__.pyi
titanfp/fpy/utils/: __init__.py  compare.py  gensym.py
