[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fpy2"
version = "0.0.1"
authors = [ 
  { name="Brett Saiki", email="bsaiki@cs.washington.edu" }
]
description = "An embedded DSL for numerical computing"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/bksaiki/fpy"
Issues = "https://github.com/bksaiki/fpy/issues"
